Add detailed changelog section to both READMEs
Document all bug fixes, JDK compatibility changes, resource leak
and thread safety improvements, new features, and test coverage.